// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if the container content is of the full width of the available space 1`] = `
<GridContainerElement
  className="gc-grid-container"
  gutterSizes="0"
  maxWidth="100%"
  type="full"
>
  test
</GridContainerElement>
`;

exports[`if the container is centered and has a max-width of 100% 1`] = `
<GridContainerElement
  className="gc-grid-container"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  maxWidth="100%"
  type="fluid"
>
  test
</GridContainerElement>
`;

exports[`if the container is centered and have a max-width of 75rem 1`] = `
<GridContainerElement
  className="gc-grid-container"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  maxWidth="75rem"
>
  test
</GridContainerElement>
`;
